--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -13,13 +13,15 @@
   </div>
 
   <div class="flex items-center gap-5 mb-6">
-    <img src="../../../assets/cat.png" alt="Profile Picture" class="w-20 h-20 rounded-full object-cover" />
-    <button class="px-4 py-1 bg-main text-white rounded-md hover:bg-darker_main transition-ease-3s">
+    <img [src]= "profilePictureUrl || '../../../assets/cat.png'" alt="Profile Picture" class="w-20 h-20 rounded-full object-cover" />
+    <button (click)="fileInput.click()" class="px-4 py-1 bg-main text-white rounded-md hover:bg-darker_main transition-ease-3s">
       Change picture
     </button>
-    <button class="px-4 py-1 border border-gray-300 rounded-md hover:bg-light_red  transition">
+    <input type="file" #fileInput accept="image/*" (change)="onFileSelected($event)" class="hidden" />
+
+    <!-- <button class="px-4 py-1 border border-gray-300 rounded-md hover:bg-light_red  transition">
       Delete
-    </button>
+    </button> -->
   </div>
 
   <div class="form w-[80%]">
