--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -19,7 +19,7 @@
 <div class="flex flex-wrap px-4 md:px-16 lg:px-20" appLazyLoad (lazyLoad)="lazyLoadRandomRecipes(6)">
   @for(meal of Meals() ; track meal){
   <div class="w-full sm:w-1/2 md:w-1/3 flex justify-between p-2" >
-    <app-meal-card [title]="meal.name" [image]="meal.image" [time]="meal.prepTime"></app-meal-card>
+    <app-meal-card [title]="meal.name" [image]="meal.image" [time]="meal.cookTime"></app-meal-card>
   </div>
   }
 </div>
