--- a/src/app/components/meal-card/meal-card.component.html
+++ b/src/app/components/meal-card/meal-card.component.html
@@ -1,9 +1,11 @@
 <div
-  class="h-96 max-w-xs m-4 bg-light_green border border-second_main rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+  class="h-80 max-w-xs m-4 bg-light_green border border-second_main rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
 >
   <div class="flex-col justify-center">
     <img class="rounded-t-lg h-48 w-80 object-cover" src="{{ image }}" alt="" />
     <div class="flex items-center mb-2 pt-3 pl-3">
+      <!-- [].constructor(rating) taamlelna array b longueur rating najjmou niteratou bih -->
+      @for(item of [].constructor(rating); track $index){
       <svg
         class="w-4 h-4 ms-1 text-yellow-300"
         aria-hidden="true"
@@ -14,55 +16,11 @@
         <path
           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
         />
-      </svg>
-      <svg
-        class="w-4 h-4 ms-1 text-yellow-300"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="currentColor"
-        viewBox="0 0 22 20"
-      >
-        <path
-          d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
-        />
-      </svg>
-      <svg
-        class="w-4 h-4 ms-1 text-yellow-300"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="currentColor"
-        viewBox="0 0 22 20"
-      >
-        <path
-          d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
-        />
-      </svg>
-      <svg
-        class="w-4 h-4 ms-1 text-yellow-300"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="currentColor"
-        viewBox="0 0 22 20"
-      >
-        <path
-          d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
-        />
-      </svg>
-      <svg
-        class="w-4 h-4 ms-1 text-yellow-300"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="currentColor"
-        viewBox="0 0 22 20"
-      >
-        <path
-          d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
-        />
-      </svg>
+      </svg>}
     </div>
   </div>
   <div class="px-3 my-3">
-    <h1 class="text-xl font-semibold text-gray-800 dark:text-white">
+    <h1 class="text-xl font-semibold text-gray-800 dark:text-white truncate">
       {{ title }}
     </h1>
   </div>
