--- a/src/app/recipe/recipe-content/recipe-content.component.html
+++ b/src/app/recipe/recipe-content/recipe-content.component.html
@@ -4,10 +4,36 @@
       <img src="../../../assets/recipe/arrow-up.svg" />
       85% would do this again
     </div>
-    <h1 class="recipe-title text-main text-5xl text-center">
-      {{ recipe?.name }}
-    </h1>
-
+    <div class="grid grid-cols-10 gap-4">
+      <h1
+        class="col-start-1 col-end-10 recipe-title text-main text-5xl text-left"
+      >
+        {{ recipe?.name }}
+      </h1>
+      <button
+        type="button"
+        (click)="likeRecipe()"
+        class="flex items-center text-sm hover:underline dark:text-gray-400 font-inter ml-4"
+      >
+        <svg
+          class="mr-1.5 w-8 h-8"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          [attr.fill]="liked ? 'red' : 'none'"
+          viewBox="0 0 24 24"
+          [ngClass]="{ 'bg-red-500': liked, 'bg-gray-500': !liked }"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
+          />
+        </svg>
+      </button>
+    </div>
     <!-- Recipe Details -->
     <div class="grid justify-items-center">
       <img
