--- a/src/app/recipe/recipe-suggestions/recipe-suggestions.component.html
+++ b/src/app/recipe/recipe-suggestions/recipe-suggestions.component.html
@@ -1,11 +1,11 @@
 <div class="p-8 mx-[10%]">
   <div class="suggestions">
-    <h2 class="text-main">You might also like</h2>
+    <h2 class="text-main text-6xl font-playfair font-bold">You might also like</h2>
     <div class="suggestions-grid">
       @for(recipe of recipes ; track recipe.id){ @if(recipe.image){
       <div class="suggestion-item">
-        <img src="{{ recipe.image }}" alt="{{ recipe.name }}" />
-        <p>{{ recipe.name }}</p>
+        <img src="{{ recipe.image }}" alt="{{ recipe.name }}" class="" />
+        <p class="font-inter text-base">{{ recipe.name }}</p>
       </div>
       }}
     </div>
