--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -13,8 +13,10 @@
   </div>
 
   <div class="flex items-center gap-5 mb-6">
-    <img [src]= "profilePictureUrl || '../../../assets/cat.png'" alt="Profile Picture" class="w-20 h-20 rounded-full object-cover" />
-    <button (click)="fileInput.click()" class="px-4 py-1 bg-main text-white rounded-md hover:bg-darker_main transition-ease-3s">
+    <img [src]="profilePictureUrl || '../../../assets/cat.png'" alt="Profile Picture"
+      class="w-20 h-20 rounded-full object-cover" />
+    <button (click)="fileInput.click()"
+      class="px-4 py-1 bg-main text-white rounded-md hover:bg-darker_main transition-ease-3s">
       Change picture
     </button>
     <input type="file" #fileInput accept="image/*" (change)="onFileSelected($event)" class="hidden" />
@@ -27,30 +29,30 @@
   <div class="form w-[80%]">
     <form [formGroup]="profileForm" (ngSubmit)="saveProfile()" class=" flex flex-wrap font-inter ml-[-10px]">
       <div class="m-4 w-[40%]">
-        <label for="full-name" class="uppercase font-light text-gray block text-sm mb-1">Full Name</label>
+        <label for="name" class="uppercase font-light text-gray block text-sm mb-1">Full Name</label>
         <div class="flex items-center border-b border-gray py-2">
           <i class="fas fa-user text-amber-600 mr-2"></i>
-          <input type="text" id="full-name" class="w-full outline-none " placeholder="Saboua Abd"
-            formControlName="fullName" name="fullName" />
+          <input type="text" id="name" class="w-full outline-none " placeholder="Saboua Abd" formControlName="name"
+            name="name" />
         </div>
-        <div *ngIf="profileForm.get('fullName')?.invalid && profileForm.get('fullName')?.touched" class="text-sm">
-          <small *ngIf="profileForm.get('fullName')?.hasError('required')">Full Name is required.</small>
-          <small *ngIf="profileForm.get('fullName')?.hasError('minlength')">Full Name must be at least 3
+        <div *ngIf="profileForm.get('name')?.invalid && profileForm.get('name')?.touched" class="text-sm">
+          <small *ngIf="profileForm.get('name')?.hasError('required')">Full Name is required.</small>
+          <small *ngIf="profileForm.get('name')?.hasError('minlength')">Full Name must be at least 3
             characters.</small>
         </div>
 
       </div>
 
       <div class="m-4 w-[40%]">
-        <label for="username" class="block text-sm uppercase font-light text-gray mb-1">Username</label>
+        <label for="surname" class="block text-sm uppercase font-light text-gray mb-1">Surname</label>
         <div class="flex items-center border-b border-gray-300 py-2">
           <i class="fa-regular fa-user mr-2"></i>
-          <input type="text" id="username" class="w-full outline-none text-gray-700" placeholder="Miller"
-            formControlName="username" name="username" />
+          <input type="text" id="surname" class="w-full outline-none text-gray-700" placeholder="Miller"
+            formControlName="surname" name="surname" />
         </div>
-        <div *ngIf="profileForm.get('username')?.invalid && profileForm.get('username')?.touched" class="text-sm">
-          <small *ngIf="profileForm.get('username')?.hasError('required')">Username is required.</small>
-          <small *ngIf="profileForm.get('username')?.hasError('minlength')">Username must be at least 3
+        <div *ngIf="profileForm.get('surname')?.invalid && profileForm.get('surname')?.touched" class="text-sm">
+          <small *ngIf="profileForm.get('surname')?.hasError('required')">Username is required.</small>
+          <small *ngIf="profileForm.get('surname')?.hasError('minlength')">Username must be at least 3
             characters.</small>
         </div>
       </div>
@@ -59,7 +61,7 @@
         <label for="email" class="block text-sm uppercase font-light text-gray mb-1">Email</label>
         <div class="flex items-center border-b border-gray-300 py-2">
           <i class="fa-regular fa-envelope mr-2"></i>
-          <input type="email" id="email" class="w-full outline-none text-gray-700" placeholder="sousou@gmail.com"
+          <input type="email" id="email" class="w-full outline-none text-gray-700" placeholder="enter your email here"
             formControlName="email" name="email" />
         </div>
         <div *ngIf="profileForm.get('email')?.invalid && profileForm.get('email')?.touched" class="text-sm">
@@ -125,7 +127,7 @@
   </div>
 
   <div class="favorites">
-    <app-product-list [items]="products" [showLoadMore]="showLoadMore" (loadMore)="handleLoadMore()">
-    </app-product-list>
+    <!-- <app-recipe-grid [items]="products" [showLoadMore]="showLoadMore" (loadMore)="handleLoadMore()">
+    </app-recipe-grid> -->
   </div>
 </div>
