--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,7 +10,7 @@
         >
           <li>
             <a
-            [routerLink]="[routes.test]"
+            [routerLink]="[routes.search]"
               class="block py-2 pr-4 pl-3 font-playfair text-lg text-main lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0"
               >Recipes</a
             >
