--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -55,19 +55,30 @@
       </div>
 
       <div class="m-4  w-[40%]">
+        <label for="password" class="block text-sm uppercase font-light text-gray mb-1">Old Password</label>
+
+        <span class="flex flex-row">
+          <div class="flex items-center border-b border-gray-300 py-2 mr-2">
+            <i class="fa-solid fa-lock mr-2"></i>
+            <input type="password" id="password" class="w-full outline-none text-gray-700" placeholder="********"
+            [(ngModel)]="profileForm.old_password"
+            name="old_password" />
+          </div>
+        </span>
+      </div>
+      <div class="m-4  w-[40%]">
         <label for="password" class="block text-sm uppercase font-light text-gray mb-1">New Password</label>
 
         <span class="flex flex-row">
           <div class="flex items-center border-b border-gray-300 py-2 mr-2">
             <i class="fa-solid fa-lock mr-2"></i>
             <input type="password" id="password" class="w-full outline-none text-gray-700" placeholder="********"
-            [(ngModel)]="profileForm.password"
-            name="password" />
+            [(ngModel)]="profileForm.new_password"
+            name="new_password" />
           </div>
           <button (click)="changePassword()" class="change-password">change </button>
         </span>
       </div>
-
       <div class="flex justify-between">
         <button type="submit"
           class="px-6 py-2 bg-amber-600 text-white rounded-md hover:bg-amber-700 transition">
