--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -1,105 +1,177 @@
 <div class="p-8 mx-[10%]">
   <div class="flex justify-between">
-    <h1 class="profile text-3xl uppercase font-bold mb-8 font-playfair">Profile</h1>
+    <h1 class="profile text-3xl uppercase font-bold mb-8 font-playfair">
+      Profile
+    </h1>
     <div class="save-delete flex flex-col space-y-4">
-      <button (click)="saveProfile()"
-        class="px-4 py-1 text-white bg-second_main hover:bg-darker_second_main rounded-md">
+      <button
+        (click)="saveProfile()"
+        class="px-4 py-1 text-white bg-second_main hover:bg-darker_second_main rounded-md"
+      >
         Save
       </button>
-      <button (click)="deleteAccount()" class="px-4 py-1 text-white bg-main rounded-md hover:bg-darker_main transition">
+      <button
+        (click)="deleteAccount()"
+        class="px-4 py-1 text-white bg-main rounded-md hover:bg-darker_main transition"
+      >
         Delete account
       </button>
     </div>
   </div>
 
   <div class="flex items-center gap-5 mb-6">
-    <img [src]="profilePictureUrl" alt="Profile Picture"
-      class="w-20 h-20 rounded-full object-cover" />
-    <button (click)="fileInput.click()"
-      class="px-4 py-1 bg-main text-white rounded-md hover:bg-darker_main transition-ease-3s">
+    <img
+      [src]="profilePictureUrl"
+      alt="Profile Picture"
+      class="w-20 h-20 rounded-full object-cover"
+    />
+    <button
+      (click)="fileInput.click()"
+      class="px-4 py-1 bg-main text-white rounded-md hover:bg-darker_main transition-ease-3s"
+    >
       Change picture
     </button>
-    <input type="file" #fileInput accept="image/*" (change)="onFileSelected($event)" class="hidden" />
+    <input
+      type="file"
+      #fileInput
+      accept="image/*"
+      (change)="onFileSelected($event)"
+      class="hidden"
+    />
   </div>
 
   <div class="form w-[80%]">
-    <form (ngSubmit)="saveProfile()" class=" flex flex-wrap font-inter ml-[-10px]">
+    <form
+      (ngSubmit)="saveProfile()"
+      class="flex flex-wrap font-inter ml-[-10px]"
+    >
       <div class="m-4 w-[40%]">
-        <label for="name" class="uppercase font-light text-gray block text-sm mb-1">Full Name</label>
+        <label
+          for="name"
+          class="uppercase font-light text-gray block text-sm mb-1"
+          >Full Name</label
+        >
         <div class="flex items-center border-b border-gray py-2">
           <i class="fas fa-user text-amber-600 mr-2"></i>
-          <input type="text" id="name" class="w-full outline-none " placeholder="Enter your name"       [(ngModel)]="profileForm.name"
-
-            name="name" />
+          <input
+            type="text"
+            id="name"
+            class="w-full outline-none"
+            placeholder="Enter your name"
+            [(ngModel)]="profileForm.name"
+            name="name"
+          />
         </div>
       </div>
 
       <div class="m-4 w-[40%]">
-        <label for="surname" class="block text-sm uppercase font-light text-gray mb-1">Surname</label>
+        <label
+          for="surname"
+          class="block text-sm uppercase font-light text-gray mb-1"
+          >Surname</label
+        >
         <div class="flex items-center border-b border-gray-300 py-2">
           <i class="fa-regular fa-user mr-2"></i>
-          <input type="text" id="surname" class="w-full outline-none text-gray-700" placeholder="Enter your surname"
-          [(ngModel)]="profileForm.surname"
-          name="surname" />
+          <input
+            type="text"
+            id="surname"
+            class="w-full outline-none text-gray-700"
+            placeholder="Enter your surname"
+            [(ngModel)]="profileForm.surname"
+            name="surname"
+          />
         </div>
       </div>
 
-      <div class="m-4  w-[40%]">
-        <label for="email" class="block text-sm uppercase font-light text-gray mb-1">Email</label>
+      <div class="m-4 w-[40%]">
+        <label
+          for="email"
+          class="block text-sm uppercase font-light text-gray mb-1"
+          >Email</label
+        >
         <div class="flex items-center border-b border-gray-300 py-2">
           <i class="fa-regular fa-envelope mr-2"></i>
-          <input type="email" id="email" class="w-full outline-none text-gray-700" placeholder="Enter your email"
-          [(ngModel)]="profileForm.email"
-          name="email" />
+          <input
+            type="email"
+            id="email"
+            class="w-full outline-none text-gray-700"
+            placeholder="Enter your email"
+            [(ngModel)]="profileForm.email"
+            name="email"
+          />
         </div>
       </div>
 
-      <div class="m-4  w-[40%]">
-        <label for="password" class="block text-sm uppercase font-light text-gray mb-1">New Password</label>
+      <div class="m-4 w-[40%]">
+        <label
+          for="password"
+          class="block text-sm uppercase font-light text-gray mb-1"
+          >New Password</label
+        >
 
         <span class="flex flex-row">
           <div class="flex items-center border-b border-gray-300 py-2 mr-2">
             <i class="fa-solid fa-lock mr-2"></i>
-            <input type="password" id="password" class="w-full outline-none text-gray-700" placeholder="********"
-            [(ngModel)]="profileForm.password"
-            name="password" />
+            <input
+              type="password"
+              id="password"
+              class="w-full outline-none text-gray-700"
+              placeholder="********"
+              [(ngModel)]="profileForm.password"
+              name="password"
+            />
           </div>
-          <button (click)="changePassword()" class="change-password">change </button>
+          <button (click)="changePassword()" class="change-password">
+            change
+          </button>
         </span>
       </div>
 
       <div class="flex justify-between">
-        <button type="submit"
-          class="px-6 py-2 bg-amber-600 text-white rounded-md hover:bg-amber-700 transition">
+        <button
+          type="submit"
+          class="px-6 py-2 bg-amber-600 text-white rounded-md hover:bg-amber-700 transition"
+        >
           Save
         </button>
-        <button class="px-6 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition">
+        <button
+          class="px-6 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition"
+        >
           Delete account
         </button>
       </div>
     </form>
-
   </div>
 
   <div class="mt-[30px] favorites header">
     <div class="flex flex-row justify-between">
       <div class="flex">
-        <img src="../../../assets/favorite.png" class="w-8 h-8 mr-4 rounded-full object-cover" alt="">
-        <h1 class="text-3xl  font-bold mb-8 font-playfair">Favorites</h1>
+        <img
+          src="../../../assets/favorite.png"
+          class="w-8 h-8 mr-4 rounded-full object-cover"
+          alt=""
+        />
+        <h1 class="text-3xl font-bold mb-8 font-playfair">Favorites</h1>
       </div>
       <div class="relative inline-block">
-        <button (click)="toggleDropdown($event)" class="px-6 py-1  border-[1px] rounded-md hover:bg-bg_fonce ;
-            ">
+        <button
+          (click)="toggleDropdown($event)"
+          class="px-6 py-1 border-[1px] rounded-md hover:bg-bg_fonce ;"
+        >
           Sort by
           <i class="fa-solid fa-arrow-down"></i>
         </button>
-        <div #dropdownMenu
+        <div
+          #dropdownMenu
           class="absolute dropdown bg-bg border-[1px] border-gray hidden shadow-lg rounded-md mt-2 w-48"
-          [class.hidden]="!isDropdownOpen">
+          [class.hidden]="!isDropdownOpen"
+        >
           <ul class="py-[4px] text-gray-800 w-full">
-            <li class=" dropdown-element w-full cursor-pointer">
-              <div *ngFor="let category of categories"
-                class="w-full element px-5 hover:bg-bg_fonce py-2 cursor-pointer">
+            <li class="dropdown-element w-full cursor-pointer">
+              <div
+                *ngFor="let category of categories"
+                class="w-full element px-5 hover:bg-bg_fonce py-2 cursor-pointer"
+              >
                 {{ category }}
               </div>
             </li>
@@ -107,11 +179,17 @@
         </div>
       </div>
     </div>
-    <hr class="mt-[-20px] text-gray">
+    <hr class="mt-[-20px] text-gray" />
   </div>
 
+
   <div class="favorites">
-    <app-recipe-grid [recipesInput]="favouriteRecipies" (loadMore)="handleLoadMore()">
-    </app-recipe-grid>
+    @if(favouriteRecipies.length >0){
+    <app-recipe-grid
+      [recipesInput]="favouriteRecipies"
+      (loadMore)="handleLoadMore()"
+    >
+    </app-recipe-grid
+    >}
   </div>
 </div>
